fix scrollbar on chatlist

--- a/src/assets/sass/components/_chat.scss
+++ b/src/assets/sass/components/_chat.scss
@@ -1,10 +1,7 @@
 .chatlist-container {
-  margin: 0rem 0rem 1rem 1rem;
   padding: 0 1rem;
+  height: 22rem;
   overflow-y: auto;
-  scroll-snap-type: y mandatory;
-  height: 30rem;
-  width: 50vw;
 }
 
 .chat-divider-header {
@@ -57,6 +54,15 @@
   padding: 0.5rem 1rem;
   background-color: var(--clr-secondary-dark);
   border-radius: 1rem;
+}
+
+.chatbox-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  gap: 1rem;
+  padding: 1rem;
 }
 
 .chatbox {
