--- a/src/assets/sass/components/_scrollbar.scss
+++ b/src/assets/sass/components/_scrollbar.scss
@@ -1,10 +1,9 @@
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
   background: var(--clr-secondary-dark);
-  border-radius: 1rem;
 }
 
 ::-webkit-scrollbar-thumb {
