--- a/src/assets/sass/pages/_channel.scss
+++ b/src/assets/sass/pages/_channel.scss
@@ -1,5 +1,6 @@
 .channel-container {
   display: flex;
   flex-direction: column;
-  padding: 0rem 1rem;
+  justify-content: space-between;
+  gap: 1rem;
 }
