--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -239,12 +239,9 @@ body {
 }
 
 .chatlist-container {
-  margin: 0rem 0rem 1rem 1rem;
   padding: 0 1rem;
+  height: 22rem;
   overflow-y: auto;
-  scroll-snap-type: y mandatory;
-  height: 30rem;
-  width: 50vw;
 }
 
 .chat-divider-header {
@@ -293,6 +290,15 @@ body {
   padding: 0.5rem 1rem;
   background-color: var(--clr-secondary-dark);
   border-radius: 1rem;
+}
+
+.chatbox-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  gap: 1rem;
+  padding: 1rem;
 }
 
 .chatbox {
@@ -392,12 +398,11 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
   background: var(--clr-secondary-dark);
-  border-radius: 1rem;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -455,19 +460,23 @@ body {
 .channel-container {
   display: flex;
   flex-direction: column;
-  padding: 0rem 1rem;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
-.content {
+.app-container {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  background-color: var(--clr-primary-dark);
+}
+
+.app-content {
+  display: flex;
+  flex-direction: column;
   background-color: var(--clr-primary-dark);
   height: 100vh;
   width: 100%;
-  color: black;
-}
-
-.content-container {
-  display: flex;
-  flex-direction: row;
 }
 
 .hero-section {
